--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 			<div class="colorlib-footer">
 				
 				<ul>
-					<li><a href="#"><i class="icon-facebook2"></i></a></li>
-					<li><a href="#"><i class="icon-github"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+					<li><a href="https://www.facebook.com/profile.php?id=100034740338121"><i class="icon-facebook2"></i></a></li>
+					<li><a href="https://github.com/codeLAlit/"><i class="icon-github"></i></a></li>
+					<li><a href="https://www.instagram.com/_lalitsaini"><i class="icon-instagram"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/lalit-saini-553b35192/"><i class="icon-linkedin2"></i></a></li>
 				</ul>
 
 
