--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 				</div>
 			</section>
 			
-			<section class="colorlib-services" data-section="skills">
+			<section class="colorlib-services" data-section="skills" id="skills">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 " >
@@ -214,7 +214,7 @@
 				</div>
 			</section>
 
-			<section class="colorlib-education" data-section="education">
+			<section class="colorlib-education" data-section="education" id="education">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 ">
@@ -292,7 +292,7 @@
 				</div>
 			</section>
 
-			<section class="colorlib-experience" data-section="experience">
+			<section class="colorlib-experience" data-section="experience" id="experience">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 " data-animate-effect="fadeInLeft">
@@ -391,7 +391,7 @@
 				</div>
 			</section>
 
-			<section class="colorlib-work" data-section="work">
+			<section class="colorlib-work" data-section="work" id="work">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 " >
@@ -428,7 +428,7 @@
 				</div>
 			</section>
 
-			<section class="colorlib-blog" data-section="blog">
+			<section class="colorlib-blog" data-section="blog" id="blog">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 " >
@@ -439,11 +439,11 @@
 					<div class="row">
 						<div class="col-md-4 col-sm-6 ">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="blogs/blog_ctf_tools.html" class="blog-img"><img src="images/CTF_1.png" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>Date</small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
-									<h3><a href="blog.html">Coming soon</a></h3>
-									<p>Really Soon</p>
+									<span><small>23 June 2020</small> | <small> CTF </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
+									<h3><a href="bolgs/blog_ctf_tools.html">CTF TOOLS</a></h3>
+									<p>Here are some tools that are required during a ctf.</p>
 								</div>
 							</div>
 						</div>
@@ -471,7 +471,7 @@
 				</div>
 			</section>
 
-			<section class="colorlib-contact" data-section="contact">
+			<section class="colorlib-contact" data-section="contact" id="contact">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3" >
