--- a/index.html
+++ b/index.html
@@ -397,6 +397,7 @@
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 " >
 							<span class="heading-meta">My Work</span>
 							<h2 class="colorlib-heading">Recent Work</h2>
+							<p> Click on <b>Project title</b> to see attached repository.</p>
 						</div>
 					</div>	
 					<div class="row">
@@ -410,7 +411,32 @@
 									</div>
 								</div>
 							</div>
+						</div>				
+						<div class="col-md-6 " >
+							<div class="project" style="background-image: url(images/color_cppn.png);">
+								<div class="desc">
+									<div class="con">
+										<h3><a href="https://github.com/codeLAlit/Super-Resolution-Images">Super-Resolution-Images</a></h3>
+										<span>Deep Learning | Computer Vision</span>
+										I attempt to create high resolution MNIST images using Lower resolution images. Read more about it
+										from the README of the directory.
+									</div>
+								</div>
+							</div>
 						</div>
+						<div class="col-md-6 " >
+							<div class="project" style="background-image: url(images/fas.jpg);">
+								<div class="desc">
+									<div class="con">
+										<h3><a href="https://github.com/codeLAlit/FAS"></a>Face Based Attendence System</a></h3>
+										<span>Image Processing | Computer Vision</span>
+										I created a web based platform to store employee facial features and use them to detect the presence
+										of one in an office. It is very basic tool but can be integrated with other system to get most out of it.
+									</div>
+								</div>
+							</div>
+						</div>	
+
 						<div class="col-md-6 " >
 							<div class="project" style="background-image: url(images/mlgym.png);">
 								<div class="desc">
@@ -423,8 +449,7 @@
 									</div>
 								</div>
 							</div>
-						</div>					
-			
+						</div>	
 				</div>
 			</section>
 
@@ -449,11 +474,12 @@
 						</div>
 						<div class="col-md-4 col-sm-6 " >
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="https://github.com/codeLAlit/CsecCTF20_writeups" class="blog-img"><img src="images/csec.png" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>Date</small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
-									<h3><a href="blog.html">Coming soon</a></h3>
-									<p>Really Soon</p>
+									<span><small>27 June 2020</small> | <small> CTF </small> | <small> <i class="icon-bubble3"></i> 0</small></span>
+									<h3><a href="https://github.com/codeLAlit/CsecCTF20_writeups">CSEC CTF20 Writeups </a></h3>
+									<p>Here are writeups for CTF conducted by CSEC club IITB, where our team secured 2nd position. 
+										Special thanks to <a href="http://www.cse.iitb.ac.in/~atulyakv" target="_blank">Atulya Kumar Verma</a>, <a href="http://www.cse.iitb.ac.in/~sahiljain" target="_blank">Sahil Jain</a> and <a href="http://www.cse.iitb.ac.in/~sauravgarg" target="_blank">Saurav Garg</a></p>
 								</div>
 							</div>
 						</div>
